--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -1,4 +1,11 @@
 .home {
+    
+    @media screen and (max-width: 1440px) {
+        body {
+           zoom: 200%;
+        }
+      }
+
     @import "../blog/blog.component.scss";
     .first-sec {
         color: #2c2c2c;
