--- a/src/app/shared/components/edit-profile/edit-profile.component.html
+++ b/src/app/shared/components/edit-profile/edit-profile.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid edit-profile">
-    <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="ball-clip-rotate" [fullScreen]="true">
-        <p style="color: white"> Loading... </p>
+    <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="rgba(0, 0, 0, 0.0)"   [fullScreen]="true">
+        <img class="spinner-img" style='animation:flip-with-scale 3s infinite;position: relative;top:-100px;' src='../../assets/images/logo-loader.png'/>
     </ngx-spinner>
     <div class="row justify-content-center">
         <div class="col-xs-12 col-lg-10">
