--- a/src/app/shared/components/property-details/property-details.component.html
+++ b/src/app/shared/components/property-details/property-details.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluied property-details">
-    <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-clip-rotate" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
-
+    <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="rgba(0, 0, 0, 0.0)"   [fullScreen]="true">
+        <img class="spinner-img" style='animation:flip-with-scale 3s infinite;position: relative;top:-100px;' src='../../assets/images/logo-loader.png'/>
+    </ngx-spinner>
     <div class="row justify-content-center" style="margin: 0;">
         <div class="col-xs-12 col-md-10 main-row">
             <div class="row">
@@ -57,7 +58,7 @@
                                 </div>
                         </div>
                         <p class="price">
-                            {{numberWithCommas(getPrice())}} {{'propertyDetails.EGP' | translate}}
+                            {{'propertyDetails.EGP' | translate}} {{numberWithCommas(getPrice())}} 
                         </p>
                         <div class="row">
                             <span class="location" style="color: #ABABB6;">
