--- a/src/app/shared/components/results/results.component.html
+++ b/src/app/shared/components/results/results.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluied results">
-    <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="ball-clip-rotate" [fullScreen]="true">
-        <p style="color: white"> Loading... </p>
+    <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="rgba(0, 0, 0, 0.0)"   [fullScreen]="true">
+        <img class="spinner-img" style='animation:flip-with-scale 3s infinite;position: relative;top:-100px;' src='../../assets/images/logo-loader.png'/>
     </ngx-spinner>
     <div class="row justify-content-center" style="margin: 0;">
         <div class="col-xs-12 col-md-10 main-row">
@@ -46,8 +46,8 @@
                                     <div class="row">
                                         <div class="col-8">
                                             <h5 class="card-title">
-                                                {{ numberWithCommas(item['price'])}}
-                                                <br>{{'propertyDetails.EGP' | translate}}
+                                                {{'propertyDetails.EGP' | translate}}
+                                                <br>{{ numberWithCommas(item['price'])}}
                                             </h5>
                                             <span class="location">
                                                 <img src="../../../../assets/images/noun_Location_1911856@2x.png" alt="..."/>
