--- a/src/app/shared/components/blog/blog.component.html
+++ b/src/app/shared/components/blog/blog.component.html
@@ -21,7 +21,8 @@
                                 style="border-top-right-radius: 20px;" alt="...">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title" [innerHTML]="subString(item.title)"></h5>
+                            <h5 class="card-title" [innerHTML]="">{{item.title | translate}}</h5>
+                            
                             <div class="row card-foot">
                                 <div class="col">
                                     <img src="../../../../assets/images/Calendar copy.png" alt="..."/>
