--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -362,11 +362,11 @@
                         }
                     }
                     span {
-                        display: inline-block;
-                        width: 4%;
-                        margin: unset;
-                        padding: unset;
-                        color: inherit;
+                        font-size: 10px;
+                        padding: 0 10px;
+                        color: red;
+                        margin-top: 6px;
+                        display: inherit;
                     }
                 }
                 &.priceRange {
