--- a/src/app/components/seller/seller-form-template/form-template.component.html
+++ b/src/app/components/seller/seller-form-template/form-template.component.html
@@ -59,11 +59,12 @@
                     </div>
                 </ng-template>
                 <ng-template #inputNumber let-key="key">
-                    <!-- <div [formGroup]="stepForm" class="col-12 mb-3 input-group">
+                     <div [formGroup]="stepForm" class="col-12 mb-3 input-group">
                         <span style="height:48px;background-color: #f7f7f7;color: #2c2c2c;"
                             class="input-group-text mt-3" id="inputGroup-sizing-default">{{getHelperText(ctrl.key)}}</span>
                         <input [value]="getFormValue(ctrl.key)" placeholder="{{'sell.Enter value' | translate}}"
                             (keyup)="onInputNumberChange(ctrl.key,$event)" style="height:48px" class="form-control mt-3"
+                            (change)="onInputNumberChange(ctrl.key,$event)"
                             type="number" min="0" />
                     </div> -->
                 </ng-template>
