--- a/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.html
+++ b/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.html
@@ -21,7 +21,7 @@
                 <div class="row head-section">
                   <p class="title-head col-6 float-start">{{'sell.Go to the best buyer' | translate}}</p>
                   <p class=" title-head col-6">
-                    <span class="float-end">{{'sell.Step' | translate}} 1/4</span>
+                    <span class="float-end">{{'sell.Step' | translate}} {{currentStep}} /4</span>
                   </p>
                   <div class="progress-bars col-12">
                     <div class="row">
@@ -70,24 +70,22 @@
                 </div>
               </div>
               <ng-stepper #cdkStepper [linear]="false">
-                <cdk-step [stepControl]="stepOne.stepForm" [optional]="false">
+
+                <cdk-step  [optional]="false">
                   <ng-template cdkStepLabel>
                   </ng-template>
-                  <sell-form-template #stepOne></sell-form-template>
+                  <sell-form-template ></sell-form-template>
                 </cdk-step>
-
                 <cdk-step [stepControl]="stepTwo.stepForm" [optional]="false">
                   <ng-template cdkStepLabel>
                   </ng-template>
                   <sell-form-template #stepTwo></sell-form-template>
                 </cdk-step>
-
                 <cdk-step [stepControl]="stepThree.stepForm" [optional]="false">
                   <ng-template cdkStepLabel>
                   </ng-template>
                   <sell-form-template #stepThree></sell-form-template>
                 </cdk-step>
-
                 <cdk-step [stepControl]="stepFour.stepForm" [optional]="false">
                   <ng-template cdkStepLabel>
                   </ng-template>
@@ -97,7 +95,6 @@
             </div>
           </div>
           <div class="col-xs-12 col-xl-4 priorites-control d-none d-xl-block">
-
             <div class="col mt-3">
               <ngb-accordion #myaccordion="ngbAccordion" (panelChange)="beforeChange($event)" [closeOthers]="true"
                 activeIds="{{activeIds}}">
